--- a/Internship/09OOP.ipynb
+++ b/Internship/09OOP.ipynb
@@ -100,19 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'types.GenericAlias' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39mapply_discount\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m     25\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprice \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprice \u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpay_rat\n\u001b[0;32m---> 27\u001b[0m Item\u001b[39m.\u001b[39;49minstantiate_from_csv()\n",
-      "Cell \u001b[0;32mIn[4], line 19\u001b[0m, in \u001b[0;36mItem.instantiate_from_csv\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m     17\u001b[0m     reader \u001b[39m=\u001b[39m csv\u001b[39m.\u001b[39mDictReader(f)\n\u001b[1;32m     18\u001b[0m     items \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m[reader]\n\u001b[0;32m---> 19\u001b[0m \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m items:\n\u001b[1;32m     20\u001b[0m     \u001b[39mprint\u001b[39m(item)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'types.GenericAlias' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
      ]
     }
    ],
@@ -125,6 +120,9 @@
     "        return f\"Item('{self.name}'), {self.price} , {self.quantity}\"\n",
     "    def __init__(self,name: str,price:float,quantity=0):\n",
     "        # Validation\n",
+    "        assert price>= 0, f'Price{price} is not greater than or equal to zero'\n",
+    "        assert quantity >=0, f'Quantity{quantity} is smaller than 0'\n",
+    "        # Assignment\n",
     "        self.name = name\n",
     "        self.price = price\n",
     "        self.quantity = quantity\n",
@@ -134,16 +132,186 @@
     "    def instantiate_from_csv(cls):\n",
     "        with open('items.csv','r')as f:\n",
     "            reader = csv.DictReader(f)\n",
-    "            items = list[reader]\n",
+    "            items = list(reader)\n",
     "        for item in items:\n",
-    "            print(item)\n",
-    "\n",
+    "            Item(\n",
+    "                name = item.get('name'),\n",
+    "                price = float(item.get('price')),\n",
+    "                quantity = int(item.get('quantity'))\n",
+    "            )\n",
+    "        # print(type(items))\n",
+    "        # print(items)\n",
+    "    @staticmethod\n",
+    "    def is_integer(num):\n",
+    "        # We will count out the floats that are point zero\n",
+    "        if isinstance(num,float):\n",
+    "            # Count out the floats that are point zero\n",
+    "            return num.is_integer()\n",
+    "        elif isinstance(num,int):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
     "    def calculate_total_price(self):\n",
     "        return self.price * self.quantity\n",
     "    def apply_discount(self):\n",
     "        self.price = self.price * self.pay_rat\n",
     "\n",
-    "Item.instantiate_from_csv()\n"
+    "print(Item.is_integer(7.0))\n",
+    "# Item.instantiate_from_csv()\n",
+    "# print(Item.all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv \n",
+    "\n",
+    "class Item:\n",
+    "    pay_rate = 0.8 \n",
+    "    all = []\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.__class__.__name__}('{self.name}'), {self.price} , {self.quantity}\"\n",
+    "    def __init__(self,name: str,price:float,quantity=0):\n",
+    "        # Validation\n",
+    "        self.name = name\n",
+    "        self.price = price\n",
+    "        self.quantity = quantity\n",
+    "        # Actions to execute\n",
+    "        Item.all.append(self)\n",
+    "    @classmethod\n",
+    "    def instantiate_from_csv(cls):\n",
+    "        with open('items.csv','r')as f:\n",
+    "            reader = csv.DictReader(f)\n",
+    "            items = list(reader)\n",
+    "        for item in items:\n",
+    "            Item(\n",
+    "                name = item.get('name'),\n",
+    "                price = float(item.get('price')),\n",
+    "                quantity = int(item.get('quantity'))\n",
+    "            )\n",
+    "    @staticmethod\n",
+    "    def is_integer(num):\n",
+    "        # We will count out the floats that are point zero\n",
+    "        if isinstance(num,float):\n",
+    "            # Count out the floats that are point zero\n",
+    "            return num.is_integer()\n",
+    "        elif isinstance(num,int):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    def calculate_total_price(self):\n",
+    "        return self.price * self.quantity\n",
+    "    def apply_discount(self):\n",
+    "        self.price = self.price * self.pay_rat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class Phone(Item):\n",
+    "    def __init__(self,name: str,price:float,quantity=0, \n",
+    "    broken_phones=0):\n",
+    "        # Call to super function to have access to all attributes/methods\n",
+    "        super().__init__(\n",
+    "            name,price,quantity\n",
+    "        )\n",
+    "        assert broken_phones >= 0, f'Broken Phones {broken_phones} are invalid i.e smaller than 0 '\n",
+    "\n",
+    "        # Assign to self object\n",
+    "        self.broken_phones = broken_phones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2500\n",
+      "[Phone('jscPhone'), 500 , 5, Phone('jscPhonev20'), 700 , 5]\n",
+      "[Phone('jscPhone'), 500 , 5, Phone('jscPhonev20'), 700 , 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "phone1 = Phone('jscPhone',500,5,1)\n",
+    "print(phone1.calculate_total_price())\n",
+    "phone2= Phone('jscPhonev20',700,5,1)\n",
+    "print(Item.all)\n",
+    "print(Phone.all)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Encapsulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv \n",
+    "\n",
+    "class Item:\n",
+    "    pay_rate = 0.8 \n",
+    "    all = []\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.__class__.__name__}('{self.name}'), {self.price} , {self.quantity}\"\n",
+    "    def __init__(self,name: str,price:float,quantity=0):\n",
+    "        # Validation\n",
+    "        self.__name = name\n",
+    "        self.price = price\n",
+    "        self.quantity = quantity\n",
+    "        # Actions to execute\n",
+    "        Item.all.append(self)\n",
+    "    @classmethod\n",
+    "    def instantiate_from_csv(cls):\n",
+    "        with open('items.csv','r')as f:\n",
+    "            reader = csv.DictReader(f)\n",
+    "            items = list(reader)\n",
+    "        for item in items:\n",
+    "            Item(\n",
+    "                name = item.get('name'),\n",
+    "                price = float(item.get('price')),\n",
+    "                quantity = int(item.get('quantity'))\n",
+    "            )\n",
+    "    @staticmethod\n",
+    "    def is_integer(num):\n",
+    "        # We will count out the floats that are point zero\n",
+    "        if isinstance(num,float):\n",
+    "            # Count out the floats that are point zero\n",
+    "            return num.is_integer()\n",
+    "        elif isinstance(num,int):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    def calculate_total_price(self):\n",
+    "        return self.price * self.quantity\n",
+    "    def apply_discount(self):\n",
+    "        self.price = self.price * self.pay_rate\n",
+    "    @property\n",
+    "    def name(self):\n",
+    "        return self.__name\n",
+    "    @name.setter\n",
+    "    def name(self,name):\n",
+    "        self.__name = name\n",
+    "    \n",
+    "item1 = Item(\"My Item\",787)\n",
+    "item1.name = \"LL\""
    ]
   },
   {
@@ -170,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
