--- a/Internship/11Exception_Handling.ipynb
+++ b/Internship/11Exception_Handling.ipynb
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is 1\n"
+      "x is 5\n"
      ]
     }
    ],
@@ -42,23 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X is not an integer\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "1"
+       "8"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,6 +67,23 @@
     "            return x\n",
     "\n",
     "get_int()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HI\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"HI\")"
    ]
   }
  ],
@@ -93,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
